// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BaseLink /> Renders correctly with default props 1`] = `
<a
  class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1xylxj1-MuiTypography-root-MuiLink-root"
  href="/"
/>
`;

exports[`<BaseLink /> Snapshot is correct 1`] = `
<DocumentFragment>
  <a
    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1xylxj1-MuiTypography-root-MuiLink-root"
    href="/"
  />
</DocumentFragment>
`;
